# parman

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  HEADER  README.md  pyproject.toml
.github/: requirements-old.txt
.github/workflows/: pypi.yaml  pytest.yaml  release.yaml
demo/: .gitignore  README.md  demo.py  mindmutable.py
demo/templates/boot/: jobinfo.py
demo/templates/compute/: jobinfo.py  run
demo/templates/sample/: jobinfo.py
demo/templates/train/: helper.py  jobinfo.py
demos/: jobdemo.py  mindmutable.py  scheduledemo.py  waitdemo.py
demos/cached/: README.md  all.sh  cache.txt  cached.py  slowcache.txt  slowscript.sh
demos/demc/: README.md  demc.py  linreg.py  naivemc.py
demos/inspiration/: README.md
demos/inspiration/plastic/: .gitignore  README.md  alumina.json  ibuprofen.xyz  jobinfo.py  plastic.py  run
demos/jobdemo/: .gitignore  jobdemo.py
demos/jobdemo-al/: .gitignore  jobdemo.py
demos/jobdemo-al/templates/boot/: jobinfo.py  submit.sh
demos/jobdemo-al/templates/compute/: jobinfo.py  run
demos/jobdemo-al/templates/sample/: jobinfo.py
demos/jobdemo-al/templates/train/: jobinfo.py  submit.sh
demos/jobdemo/templates/boot/: jobinfo.py  run  script.py
demos/jobdemo/templates/compute/: jobinfo.py  run
demos/jobdemo/templates/sample/: jobinfo.py  run  script.py
demos/jobdemo/templates/train/: helper.py  jobinfo.py  run
demos/jobslow/: workflow.py
demos/jobslow/template/: jobinfo.py  run  submit.sh
demos/templates/boot/: run
demos/templates/sample/: run
demos/templates/train/: jobinfo.py  run
src/parman/: __init__.py  closure.py  job.py  metafunc.py  scheduler.py  treeleaf.py  waitfuture.py  wrapper.py
src/parman/clerks/: __init__.py  base.py  local.py  localtemp.py
src/parman/runners/: __init__.py  base.py  concurrent.py  dry.py  future.py  parsl.py  serial.py
src/parman/scripts/: __init__.py  clean_results.py  sbatch_wait.py
src/parman/tests/: __init__.py  conftest.py  jobdemo-al-results.sha256  test_demos.py  test_scheduler.py  test_treeleaf.py  test_waitfuture.py
src/sweetfuture/: __init__.py  closure.py  job.py  metafunc.py  recursive.py  scheduler.py  treeleaf.py  waitfuture.py
src/sweetfuture/clerks/: __init__.py  base.py  local.py  localtemp.py
src/sweetfuture/runners/: __init__.py  base.py  concurrent.py  dask.py  dry.py  future.py  jobinfo.py  parsl.py  serial.py
src/sweetfuture/tests/: __init__.py  conftest.py  test_demos.py  test_recursive.py  test_scheduler.py  test_treeleaf.py  test_waitfuture.py
tests/: conftest.py  jobdemo-results.sha256  test_demos.py  test_job.py  test_metafunc.py  test_runners.py  test_sbatch_wait.py  test_scheduler.py  test_treeleaf.py  test_waitfuture.py
