[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ParMan"
authors = [
  { name="Toon Verstraelen", email="toon.verstraelen@ugent.be" },
]
description = "ParMan extends Python concurrent.futures to facilitate parallel workflows"
readme = "README.md"
license = {file = "COPYING"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["attrs", "cattrs"]
dynamic = ["version"]

[project.urls]
Issues = "https://github.com/reproducible-reporting/parman/issues"
Source = "https://github.com/reproducible-reporting/parman/"
Changelog = "https://github.com/reproducible-reporting/parman/blob/main/CHANGELOG.md"


[project.scripts]
parman-sbatch-wait = "parman.scripts.sbatch_wait:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
select = ["E", "F", "UP", "B", "I", "PGH", "PL", "RUF"]
line-length = 100
ignore = ["PLR2004", "PLR0913", "PLR0912", "PLW2901"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools_scm]
write_to = "src/parman/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"
